# CrazeCC

./: CMakeLists.txt  README.md  compiler_output  example.cl  main.cpp  output  test.craze
code_gen/: code_gen.cpp  code_gen.hpp  function_call_gen.cpp  function_call_gen.hpp  function_gen.cpp  function_gen.hpp  helper.hpp  if_gen.cpp  if_gen.hpp  return_gen.cpp  return_gen.hpp  variable_gen.cpp  variable_gen.hpp
compiler/: compiler.hpp
exception/: exception.cpp  exception.hpp
lexer/: lexer.hpp
parser/: ast.hpp  generate_ast.cpp  generate_ast.hpp  parser.hpp  syntax_validator.cpp  syntax_validator.hpp
preprocessor/: ast.hpp  preprocessor.cpp  preprocessor.hpp
tests/: test.cpp  test.hpp
tests/cases/: main.cl
